C/examples/pracc/good/makefile.bcc
#
# Makefile for Borland's Borland-C++ compiler
#
CC=bcc
#
# Flags 
#     	-N  -- Check for stack overflow
#	-v  -- Enable debugging
#	-w  -- Turn on all warnings
#	-ml -- Large model
#
CFLAGS=-N -v -w -ml

good.exe: good.c
	$(CC) $(CFLAGS) -egood good.c

clean:
	erase good.exe
