C/examples/pracc/bad/makefile.bcc
#
# Makefile for Borland's Borland-C++ compiler
#
CC=bcc
#
# Flags 
#     	-N  -- Check for stack overflow
#	-v  -- Enable debugging
#	-w  -- Turn on all warnings
#	-ml -- Large model
#
CFLAGS=-N -v -w -ml

bad.exe: bad.c
	$(CC) $(CFLAGS) -ebad bad.c

clean:
	erase bad.exe
